<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:padding="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_orange_light"
        android:hint="$0.00"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="12dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/people_amount"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/num_people"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_BillAmount" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="252dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/people_amount"
        app:layout_constraintTop_toBottomOf="@+id/textView_BillAmount" />

    <TextView
        android:id="@+id/percent_textView"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/percent"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_amount" />

    <SeekBar
        android:id="@+id/percent_seekBar"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:max="90"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent_textView"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tip_textView"
        android:layout_width="85dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tip_textview"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_textView" />

    <TextView
        android:id="@+id/tipAmount_textView"
        android:layout_width="231dp"
        android:layout_height="56dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tipamount"
        android:textColor="@android:color/holo_purple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/tip_textView"
        app:layout_constraintTop_toBottomOf="@+id/percent_seekBar" />

    <TextView
        android:id="@+id/total_textView"
        android:layout_width="129dp"
        android:layout_height="73dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_textview"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="229dp"
        android:layout_height="77dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/totalTotal"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/total_textView"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount_textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_textView">

        <RadioButton
            android:id="@+id/no_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/noRound" />

        <RadioButton
            android:id="@+id/round_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tipRound" />

        <RadioButton
            android:id="@+id/round_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/totalRound" />
    </RadioGroup>

    <TextView
        android:id="@+id/perPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Total Per Person"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="$0.00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/perPerson"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


</androidx.constraintlayout.widget.ConstraintLayout>